# glfw

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: gl.h  library.hpp  shaders.hpp
include/glad/: gl.h
shaders/: fs.glsl  vs.glsl
src/: gl.c  library.cpp  main.cpp  shaders.cpp
